# SGM_CUDA_for_feature_map

dev_cuda/: CMakeLists.txt  README.md
dev_cuda/example/: CMakeLists.txt  demo.cu  demo_sgsm.cu
dev_cuda/include/: compute_directional_cost.hpp  compute_directional_cost_cuda.hpp  npy.hpp  semi_global_matching.hpp  simple_stereo_matching.hpp
dev_cuda/src/: CMakeLists.txt  census_transform.cu  compute_cost.cu  compute_sum_diff_cost.cu  hello.cu  semi_global_stereo_matching.cu  simple_stereo_matching.cu
dev_cuda/test/: CMakeLists.txt  test_census_transform.cu  test_compute_cost.cu  test_compute_directional_cost.cu  test_compute_sum_diff_cost.cu  test_gen_disparity_map.cu  test_inc_sum_up_cost.cu  test_sum_up_cost.cu
python/: feat_extractor.py  get_human.py  read_pfm.py  vgg_feat_stereo_matching.py
